Test/temp.out
Error type B at Line 3: Missing "]"
Error type B at Line 5: Missing ";"
Error type B at Line 6: Something wrong with the statement
