Test/temp.cmm
int main() {
    int i = 1;
    a[5 a;
    i = 1;
    iint i = 1;
    int i = 1;
}
